--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
       color: #1e3a8a;
     }
 
+     .logo-title {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+
+     .logo {
+      width: 50px;
+      height: 50px;
+      object-fit: contain;
+    }
+
     nav {
       position: fixed;
       top: 20px;
@@ -200,9 +212,13 @@
   </div>
 
   <!-- HEADER -->
-  <header>
+<header>
+  <div class="logo-title">
+    <img src="logo.png" alt="Logo Perpustakaan" class="logo">
     <h1>Perpustakaan Haya Farras</h1>
-  </header>
+  </div>
+</header>
+
 
   <!-- NAV -->
   <nav>
