--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
         <div class="about-links">
           <a href="https://instagram.com/thirahay" target="_blank">Instagram</a>
-          <a href="https://drive.google.com/drive/folders/1xfyE7vIU5a05aADljtF3Ku4mBBQ_ZjrF?usp=drive_link" target="_blank">Curriculum Vitae</a>
+          <a href="https://drive.google.com/file/d/1r1lnVzjixANkzNoi87yE_cddTXBTAZDV/view?usp=sharing" target="_blank">Curriculum Vitae</a>
         </div>
       </div>
     </section>
